--- a/core/website/templates/base.html
+++ b/core/website/templates/base.html
@@ -47,7 +47,7 @@
 
                     <div class="col-3 ">
                         <div class="site-logo">
-                            <a href="index.html" class="font-weight-bold">
+                            <a href="{% url 'website:index' %}" class="font-weight-bold">
                                 <img src="{% static 'images/logo3.png' %}" alt="Image" class="img-fluid">
                             </a>
                         </div>
@@ -64,11 +64,10 @@
 
                         <nav class="site-navigation text-right ml-auto d-none d-lg-block" role="navigation">
                             <ul class="site-menu main-menu js-clone-nav ml-auto ">
-                                <li class="active"><a href="index.html" class="nav-link">Home</a></li>
-                                <li><a href="about.html" class="nav-link">About</a></li>
-                                <li><a href="trips.html" class="nav-link">Trips</a></li>
-                                <li><a href="blog.html" class="nav-link">Blog</a></li>
-                                <li><a href="contact.html" class="nav-link">Contact</a></li>
+                                <li class="active"><a href="{% url 'website:index' %}" class="nav-link">Home</a></li>
+                                <li><a href="{% url 'website:about' %}" class="nav-link">About</a></li>                            
+                                <li><a href="{% url 'blog:home' %}" class="nav-link">Blog</a></li>
+                                <li><a href="{% url 'website:contact' %}" class="nav-link">Contact</a></li>
                             </ul>
                         </nav>
                     </div>
