--- a/core/website/templates/website/about.html
+++ b/core/website/templates/website/about.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="ftco-blocks-cover-1">
-  <div class="site-section-cover overlay" style="background-image: url('images/hero_1.jpg')">
+  <div class="site-section-cover overlay" style="background-image: url('static/images/about_1.jpg')">
     <div class="container">
       <div class="row align-items-center justify-content-center text-center">
         <div class="col-md-5" data-aos="fade-up">
@@ -14,7 +15,6 @@
     </div>
   </div>
 </div>
-
 
 <div class="site-section py-5">
   <div class="container">
@@ -30,7 +30,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis enim a pariatur molestiae.</p>
       </div>
       <div class="col-md-6" data-aos="fade-right">
-        <img src="images/traveler.jpg" alt="Image" class="img-fluid">
+        <img src="static/images/traveler.jpg" alt="Image" class="img-fluid">
       </div>
     </div>
   </div>
@@ -51,7 +51,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis enim a pariatur molestiae.</p>
       </div>
       <div class="col-md-6 order-1" data-aos="fade-left">
-        <img src="images/hero_1.jpg" alt="Image" class="img-fluid">
+        <img src="static/images/hero_1.jpg" alt="Image" class="img-fluid">
       </div>
     </div>
   </div>
@@ -76,7 +76,7 @@
 
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="person-29191 text-center">
-          <img src="images/person_1.jpg" alt="Image" class="img-fluid mb-4">
+          <img src="static/images/person_1.jpg" alt="Image" class="img-fluid mb-4">
           <div class="px-4">
             <h2 class="mb-2">John Doe</h2>
             <p class="caption mb-4">Staff</p>
@@ -93,7 +93,7 @@
 
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="person-29191 text-center">
-          <img src="images/person_2.jpg" alt="Image" class="img-fluid mb-4">
+          <img src="static/images/person_2.jpg" alt="Image" class="img-fluid mb-4">
           <div class="px-4">
             <h2 class="mb-2">Jean Doe</h2>
             <p class="caption mb-4">Staff</p>
@@ -110,7 +110,7 @@
 
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="person-29191 text-center">
-          <img src="images/person_3.jpg" alt="Image" class="img-fluid mb-4">
+          <img src="static/images/person_3.jpg" alt="Image" class="img-fluid mb-4">
           <div class="px-4">
             <h2 class="mb-2">Claire Dormey</h2>
             <p class="caption mb-4">Staff</p>
@@ -131,11 +131,7 @@
 </div>
 
 
-
-
-
-
-<div class="site-section bg-image overlay" style="background-image: url('images/hero_1.jpg')">
+<div class="site-section bg-image overlay" style="background-image: url('static/images/hero_1.jpg')">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-7 text-center">
