--- a/core/website/templates/website/contact.html
+++ b/core/website/templates/website/contact.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="ftco-blocks-cover-1">
   <div class="site-section-cover overlay" style="background-image: url('static/images/contact_1.jpg')">
@@ -14,7 +15,6 @@
     </div>
   </div>
 </div>
-
 
 <div class="site-section">
   <div class="container">
