--- a/core/blog/templates/blog/home.html
+++ b/core/blog/templates/blog/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="ftco-blocks-cover-1">
-    <div class="site-section-cover overlay" style="background-image: url('images/hero_1.jpg')">
+    <div class="site-section-cover overlay" style="background-image: url('/static/images/hero_1.jpg')">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-5" data-aos="fade-up">
@@ -24,7 +25,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="images/img_1.jpg" alt="Image" class="img-fluid">
+                        <img src="/static/images/img_1.jpg" alt="Image" class="img-fluid">
                     </a>
                     <div class="post-entry-1-contents">
 
@@ -39,23 +40,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+                        <img src="/static/images/img_2.jpg" alt="Image" class="img-fluid">
                     </a>
                     <div class="post-entry-1-contents">
 
@@ -71,22 +56,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="images/img_1.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="images/img_2.jpg" alt="Image" class="img-fluid">
+                        <img src="/static/images/img_3.jpg" alt="Image" class="img-fluid">
                     </a>
                     <div class="post-entry-1-contents">
 
@@ -102,7 +72,38 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+                        <img src="/static/images/img_1.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <div class="post-entry-1-contents">
+
+                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
+                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
+                                href="#">Admin</a></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
+                            molestias consectetur.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="post-entry-1 h-100">
+                    <a href="single.html">
+                        <img src="/static/images/img_2.jpg" alt="Image" class="img-fluid">
+                    </a>
+                    <div class="post-entry-1-contents">
+
+                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
+                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
+                                href="#">Admin</a></span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
+                            molestias consectetur.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="post-entry-1 h-100">
+                    <a href="single.html">
+                        <img src="/static/images/img_3.jpg" alt="Image" class="img-fluid">
                     </a>
                     <div class="post-entry-1-contents">
 
