--- a/core/blog/templates/blog/home.html
+++ b/core/blog/templates/blog/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="ftco-blocks-cover-1">
-    <div class="site-section-cover overlay" style="background-image: url('/static/images/hero_1.jpg')">
+    <div class="site-section-cover overlay" style="background-image: url('/static/images/blog_2.jpg')">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-5" data-aos="fade-up">
