--- a/core/website/templates/website/index.html
+++ b/core/website/templates/website/index.html
@@ -195,12 +195,12 @@
 </div>
 
 
-<div class="site-section bg-image overlay" style="background-image: url('images/hero_1.jpg')">
+<div class="site-section bg-image overlay" style="background-image: url('/static/images/164.jpg')">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-7 text-center">
-                <h2 class="font-weight-bold text-white">Join and Trip With Us</h2>
-                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ut,
+                <h2 class="font-weight-bold text-white" style="color: #000 !important;">Join and Trip With Us</h2>
+                <p class="text-white" style="color: #000 !important; font-weight: 550 !important;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus ut,
                     doloremque quo molestiae nesciunt officiis veniam, beatae dignissimos!</p>
                 <p class="mb-0"><a href="#" class="btn btn-primary text-white py-3 px-4">Get In Touch</a></p>
             </div>
