matched post datas with blog template part1

--- a/core/website/templates/website/index.html
+++ b/core/website/templates/website/index.html
@@ -8,8 +8,7 @@
                 <div class="col-md-5" data-aos="fade-right">
                     <h1 class="mb-3 text-white" style="text-shadow: 0 0px 19px #7e57c2;">Persian web Developers
                         Blog</h1>
-                    <p>Explore web development, design, SEO, and e-commerce insights, discover practical tips,
-                        and learn how to turn your ideas into real digital experiences.</p>
+                    <p>{{ hero_index }}</p>
 
                 </div>
             </div>
