--- a/core/blog/templates/blog/home.html
+++ b/core/blog/templates/blog/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 <div class="ftco-blocks-cover-1">
     <div class="site-section-cover overlay" style="background-image: url('/static/images/blog_2.jpg')">
@@ -7,8 +8,7 @@
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-5" data-aos="fade-up">
                     <h1 class="mb-3 text-white">Our Blog</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta veritatis in tenetur doloremque,
-                        maiores doloribus officia iste. Dolores.</p>
+                    <p>{{ hero_blog }}</p>
 
                 </div>
             </div>
@@ -22,100 +22,21 @@
 
 
         <div class="row">
+            {% for post in posts %}
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="/static/images/img_1.jpg" alt="Image" class="img-fluid">
+                        <img src="{{post.image.url}}" alt="Image" class="img-fluid" style="border-top-left-radius: 15px !important; border-top-right-radius: 15px !important;">
                     </a>
                     <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
+                        <h2><a href="single.html">{{post.title}}</a></h2>
+                        <span class="meta d-inline-block mb-3">{{post.published_date|date:"d M Y"}}<span class="mx-2">by</span> <a
+                                href="#">{{post.author}}</a></span>
+                        <p>{{post.content|truncatewords:15}}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="/static/images/img_2.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="/static/images/img_3.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="/static/images/img_1.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="/static/images/img_2.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="post-entry-1 h-100">
-                    <a href="single.html">
-                        <img src="/static/images/img_3.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <div class="post-entry-1-contents">
-
-                        <h2><a href="single.html">Lorem ipsum dolor sit amet</a></h2>
-                        <span class="meta d-inline-block mb-3">July 17, 2019 <span class="mx-2">by</span> <a
-                                href="#">Admin</a></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos soluta, dolore harum
-                            molestias consectetur.</p>
-                    </div>
-                </div>
-            </div>
-
+            {% endfor %}
         </div>
 
 
