--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -1335,7 +1335,9 @@ h1, h2, h3, h4, h5,
 
 .post-entry-1 .post-entry-1-contents {
   background: #2b2b2b;
-  padding: 20px; }
+  padding: 20px;
+  border-end-end-radius: 15px !important;
+  border-end-start-radius: 15px !important; }
   .post-entry-1 .post-entry-1-contents h2 {
     font-size: 22px;
     margin-bottom: 20px; }
