--- a/core/blog/templates/blog/home.html
+++ b/core/blog/templates/blog/home.html
@@ -7,8 +7,15 @@
         <div class="container">
             <div class="row align-items-center justify-content-center text-center">
                 <div class="col-md-5" data-aos="fade-up">
-                    <h1 class="mb-3 text-white">Our Blog</h1>
+                    {% if category %}
+                        <h1 class="mb-3 text-white">Blog / Category / {{category.name}}</h1>
+                    {% elif author %}
+                        <h1 class="mb-3 text-white">Blog / Author / {{author.user.username}}</h1>
+                    {% else %}
+                        <h1 class="mb-3 text-white">Our Blog</h1>
+                    {% endif %}
                     <p>{{ hero_blog }}</p>
+                    {% include "blog/search.html" %}
 
                 </div>
             </div>
@@ -26,13 +33,15 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="post-entry-1 h-100">
                     <a href="single.html">
-                        <img src="{{post.image.url}}" alt="Image" class="img-fluid" style="border-top-left-radius: 15px !important; border-top-right-radius: 15px !important;">
+                        <img src="{{post.image.url}}" alt="Image" class="img-fluid"
+                            style="border-top-left-radius: 15px !important; border-top-right-radius: 15px !important;">
                     </a>
                     <div class="post-entry-1-contents">
-                        <h2><a href="single.html">{{post.title}}</a></h2>
-                        <span class="meta d-inline-block mb-3">{{post.published_date|date:"d M Y"}}<span class="mx-2">by</span> <a
-                                href="#">{{post.author}}</a></span>
+                        <h2><a href="{% url 'blog:post-detail' pk=post.id %}">{{post.title}}</a></h2>
+                        <span class="meta d-inline-block mb-3">{{post.published_date|date:"d M Y"}}<span
+                                class="mx-2">by</span> <a href="#">{{post.author.user.username}}</a></span>                              
                         <p>{{post.content|truncatewords:15}}</p>
+                        <span class="mx-2" style="color: #b3b3b3 !important;">category :</span> <a href="{% url 'blog:category-posts' post.category.slug %}">{{post.category.name}}</a></span>
                     </div>
                 </div>
             </div>
@@ -48,6 +57,6 @@
         </div>
 
     </div>
-</div> 
+</div>
 
 {% endblock %}
